force-app/main/default/objects/User/fields/Acces_RDV__c.field-meta.xml
<CustomField>
    <fullName>Acces_RDV__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Case à cocher si le technicien a le droit de créer des rendez-vous</inlineHelpText>
    <label>Accès RDV</label>
    <type>Checkbox</type>
</CustomField>