force-app/main/default/objects/User/fields/Acces_Replanification__c.field-meta.xml
<CustomField>
    <fullName>Acces_Replanification__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Case à cocher si le technicien a le droit de replanifier ses rendez-vous</inlineHelpText>
    <label>Accès Replanification</label>
    <type>Checkbox</type>
</CustomField>