force-app/main/default/objects/User/fields/Autoriser_Intervention__c.field-meta.xml
<CustomField>
    <fullName>Autoriser_Intervention__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autoriser Intervention</label>
    <type>Checkbox</type>
</CustomField>