force-app/main/default/objects/User/fields/Bypass_flows__c.field-meta.xml
<CustomField>
    <fullName>Bypass_flows__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass flows</label>
    <type>Checkbox</type>
</CustomField>