force-app/main/default/objects/User/fields/Bypass_for_OwnBackup_users__c.field-meta.xml
<CustomField>
    <fullName>Bypass_for_OwnBackup_users__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ByPass fourni aux utilisateurs devant utiliser les fonctionnalités d&apos;archivage d&apos;OwnBackup afin de contourner certaines règles de validation</description>
    <inlineHelpText>ByPass fourni aux utilisateurs devant utiliser les fonctionnalités d&apos;archivage d&apos;OwnBackup afin de contourner certaines règles de validation</inlineHelpText>
    <label>Bypass for OwnBackup users</label>
    <type>Checkbox</type>
</CustomField>