force-app/main/default/objects/User/fields/Bypass_process_builders__c.field-meta.xml
<CustomField>
    <fullName>Bypass_process_builders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass process builders</label>
    <type>Checkbox</type>
</CustomField>