force-app/main/default/objects/User/fields/Bypass_RDD__c.field-meta.xml
<CustomField>
    <fullName>Bypass_RDD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass RDD</label>
    <type>Checkbox</type>
</CustomField>