force-app/main/default/objects/User/fields/Bypass_triggers__c.field-meta.xml
<CustomField>
    <fullName>Bypass_triggers__c</fullName>
    <label>Bypass triggers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AP01_BandeUsine</fullName>
            </value>
            <value>
                <fullName>AP01_Commande</fullName>
            </value>
            <value>
                <fullName>AP01_Conge</fullName>
            </value>
            <value>
                <fullName>AP01_Control</fullName>
                <isActive>false</isActive>
                <label>AP01_Control</label>
            </value>
            <value>
                <fullName>AP01_Controle</fullName>
            </value>
            <value>
                <fullName>AP01_Convention</fullName>
            </value>
            <value>
                <fullName>AP01_Equipement</fullName>
            </value>
            <value>
                <fullName>AP01_EquipementDuFoyer</fullName>
            </value>
            <value>
                <fullName>AP01_Evenement</fullName>
            </value>
            <value>
                <fullName>AP01_Fidelisation</fullName>
            </value>
            <value>
                <fullName>AP01_Foyer</fullName>
            </value>
            <value>
                <fullName>AP01_FoyerPaneliste</fullName>
            </value>
            <value>
                <fullName>AP01_IndividuPaneliste</fullName>
            </value>
            <value>
                <fullName>AP01_LienMeter</fullName>
            </value>
            <value>
                <fullName>AP01_MembreDuFoyer</fullName>
            </value>
            <value>
                <fullName>AP01_Requete</fullName>
            </value>
            <value>
                <fullName>AP01_StockProduit</fullName>
            </value>
            <value>
                <fullName>AP01_SuiviStockSAV</fullName>
            </value>
            <value>
                <fullName>AP01_UpdatescheduledDate</fullName>
            </value>
            <value>
                <fullName>AP01_WorkOrder</fullName>
            </value>
            <value>
                <fullName>AP010_FoyerPaneliste</fullName>
            </value>
            <value>
                <fullName>AP011_FoyerPaneliste</fullName>
            </value>
            <value>
                <fullName>AP02_BandeUsine</fullName>
            </value>
            <value>
                <fullName>AP02_Commande</fullName>
            </value>
            <value>
                <fullName>AP02_Controle</fullName>
            </value>
            <value>
                <fullName>AP02_Convention</fullName>
            </value>
            <value>
                <fullName>AP02_Equipement</fullName>
            </value>
            <value>
                <fullName>AP02_EquipementDuFoyer</fullName>
            </value>
            <value>
                <fullName>AP02_Foyer</fullName>
            </value>
            <value>
                <fullName>AP02_FoyerPaneliste</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>