force-app/main/default/objects/User/fields/Bypass_validation_rules__c.field-meta.xml
<CustomField>
    <fullName>Bypass_validation_rules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass validation rules</label>
    <type>Checkbox</type>
</CustomField>