force-app/main/default/objects/User/fields/Bypass_workflows__c.field-meta.xml
<CustomField>
    <fullName>Bypass_workflows__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass workflows</label>
    <type>Checkbox</type>
</CustomField>