force-app/main/default/objects/User/fields/Numero_paneliste__c.field-meta.xml
<CustomField>
    <fullName>Numero_paneliste__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Numero paneliste</label>
    <length>25</length>
    <type>Text</type>
</CustomField>