force-app/main/default/objects/User/fields/Provisioning_IAM__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_IAM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Provisioning IAM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>