force-app/main/default/objects/User/fields/Replanification_autorisee__c.field-meta.xml
<CustomField>
    <fullName>Replanification_autorisee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Replanification autorisée</label>
    <type>Checkbox</type>
</CustomField>