force-app/main/default/objects/User/fields/Solde_de_point__c.field-meta.xml
<CustomField>
    <fullName>Solde_de_point__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Solde de point</label>
    <length>25</length>
    <type>Text</type>
</CustomField>