force-app/main/default/objects/User/fields/Tech_CanalPrivilegie__c.field-meta.xml
<CustomField>
    <fullName>Tech_CanalPrivilegie__c</fullName>
    <formula>TEXT(Contact.Canal_privilegie__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_CanalPrivilegie</label>
    <type>Text</type>
</CustomField>