force-app/main/default/objects/User/listViews/P_le_PRM_contr_le_France.listView-meta.xml
<ListView>
    <fullName>P_le_PRM_contr_le_France</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>Pôle PRM contrôle</value>
    </filters>
    <label>Pôle PRM contrôle – France</label>
    <language>fr</language>
</ListView>